# mmtk-dev

./: .devcontainer.json  .gdbinit  .gitattributes  .gitignore  .gitmodules  Benchmark.mk  CLAUDE.md  Config-Benchmark.mk  Dockerfile  GEMINI.md  JikesRVM.local.mk  JikesRVM.mk  Makefile  OpenJDK.mk  README.md  Rakefile  bench-rsync.py  build-all.sh  dacapo.py  docker-compose.yml  jikesrvm.py  minheap.yml  mmtk-pre-commit-test.sh  openjdk.py  pause_analyzer.py  pyproject.toml  run-jdk  run-jdk.py  run-jks  run-jks.py  run-v8  task_runner.py
.cargo/: config.toml
.claude/: settings.json
.claude/commands/: commit.md  debug-lxr.md  simplify-lxr.md  verify-lxr.md
.github/scripts/: setup.sh
evaluation/: .gitignore  README.md  build.py  init.pl  manager  manager.py  rsync.py  run.py  schedule-bear.sh  schedule-boar.sh  schedule-mink.sh
evaluation/advice/: _201_compress.dc  _202_jess.ec  _209_db.ca  _209_db.dc  _209_db.ec  _213_javac.dc  _222_mpegaudio.ca  _222_mpegaudio.ec  _227_mtrt.ca  _227_mtrt.dc  _227_mtrt.ec  _228_jack.ca  _228_jack.dc  antlr.dc  avrora.dc  avrora.ec  eclipse.dc  fop.ca  fop.ec  h2.ca  h2.ec  hsqldb.ca  jython.ca  jython.ec  luindex.ca  lusearch.dc  lusearch.ec  pjbb2005.ca  pmd.dc  pmd.ec  sunflow.ca  sunflow.ec  xalan.ca  xalan.dc  xalan.ec
evaluation/configs/: README.md  benchmarks.yml  common-b00bfa9.yml  common-lxr.yml  common.yml  compressed-oops.yml  dyn-heap-args.yml  fastpath-los-check.yml  fetch-logs.sh  g1-jdk-version.yml  immix-sim-minheap.yml  ix-field-barrier-debug-alloc.yml  ix-field-barrier-debug-pauses.yml  ix-field-barrier.yml  ix-lifo.yml  ix-specialize.yml  ix-worker-yield.yml  load-balancing-ix-edge-slot.yml  load-balancing-lxr-2.yml  (+54 more)
scripts/: JikesRVM.mk  Makefile  OpenJDK.mk  bench  bench-rsync.py  build-lxr-pldi.sh  collect-file-names.py  config.py  extract.py  fetch-prebuilt-lxr.py  gcviz.py  gcviz_lxr.bt  genadvice  init-mmtk-jdk.sh  live-bytes-report.py  live-bytes-report2.py  live-bytes.py  loop.sh  lxr-dacapo-parse-frag-dist2.py  mmtk  mmtk_utils.py  openjdk  parse-cm-rate.py  parse-cm-rate2.py  pause_analyzer.py  plot-dacapo-tail-latency-w-title.ipynb  plot-dacapo-tail-latency.ipynb  plot-latency-curve copy.ipynb  plot-lbo.py  rename_advice  rename_branch.sh  run-jdk.py  run-trace-rate.sh  run_jdk.py  shell.py  test.ipynb  tracing-footprint.py  wp-load-balancing-lxr-fop.ipynb  wp-load-balancing-lxr-luindex.ipynb  wp-load-balancing.ipynb  (+2 more)
scripts/mmtk_dev/v8/args/: args-optdebug.gn
tests/: Main.java  RefFieldWrite.java
(+593 files in other folders)
