[tool.poetry]
name = "mmtk-dev"
version = "0.1.0"
description = ""
authors = ["Wenyu Zhao <wenyu.zhao@anu.edu.au>"]
readme = "README.md"
packages = [{ include = "mmtk_dev", from = "scripts" }]

[tool.poetry.scripts]
mmtk-jdk = "mmtk_dev.jdk.main:main"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
pyaml = "^23.7.0"
simple-parsing = "^0.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
hdrhistogram = "^0.10.3"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
